src/App.css
.App {
  font-family: 'Open Sans';
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 20px;
  padding: 30px;
  color: white;
  font-size: 20px;
  text-align: left;
}

.App-intro {
  font-size: large;
}

.Select {
  width: 100%;
}

.wide {
  width:100%;
}

.pad-sides {
  padding-right: 50px;
  padding-left: 50px;
}

.inventory-button {
  margin-right: 8%;
}

.buttons-cell {
  min-width: 200px;
}

.userprofile-side-panel {
  margin-top: 4.2%;
}

.userprofile-table {
  min-width: 102%;
  margin-top: 2%;
  margin-left: 2%;
}

.inventory-table-heading {
  background-color: gray!important;
  color: white!important;
  font-weight: bold;
  margin-bottom: 1.5px;
  margin-top: 2px;
}

.inventory-table-row {
  max-height: 30px;
  margin-bottom: -4px;
  background-color: black!important;
  color: white!important;
}

.subtable-body {
  background-color: white;
  max-width: 1000px;
}

.requesttable {
  margin-left: 2.7%;
  max-width: 95%;
  min-width: 95%;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.single-request-item {
  margin-left: 1.8%;
}

.single-request-pageview {
  min-width: 140%;
  max-width: 140%;
}

.col-xs-12 {
  margin-left: 20px;
  margin-right: 50px;
}

.maintable-body {
  background-color: white;
  margin-left: 12px;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.maintable-container {
  width: 95%;
  margin-left: 17px;
}

.reminder-table {
  max-width: 100%;
  margin-top: 20px;
}
.page-control-bar {
  margin-left: 0px;
}

.row {
  margin-right: 0;
}

.card-title.row {
  margin-right: -15%;
}

.log-table {
  background-color: white;
  margin-left: 2.9%;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
  color: gray;
  font-size: 85%;
  max-width: 93%;
}

.log-table-mini {
  margin-left: 2.9%;
  max-width: 80%!important;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.log-detailview-links {
  overflow: hidden;
  white-space:normal;
  max-width: 200px;
  min-width: 200px;
  text-overflow: ellipsis;
  display: block;
}

.log-description {
  max-width: 600px;
  min-width: 600px;
  overflow: hidden;
  white-space:normal;
  text-overflow: ellipsis;
}

.item-detail-view-logs {
  margin-left: -3.4%;
  max-width:80%;
}

.item-detail-view-requests {
  margin-left: -6.5%;
  min-width: 115%;
}

.item-detail-view-loans {
  margin-left: -5.3%;
}

.add-to-cart-title {
  max-width: 400px;
  overflow: hidden;
  white-space:normal;
  text-overflow: ellipsis;
}

.error-box {
  font-size: 12px;
  height: 80%;
  margin-bottom: 0;
  margin-right: 5%;
}

.react-datepicker__input-container {
  width: 100%;
}

.white-space-cell {
  display: none;
}

.table-container {
  margin-top: 200px;
}

.request-page-section {
  margin-left: 30px;
}

.subtable-row {
  text-align: left;
  color: gray;
  font-size: 13px;
  font-weight: bold;
}

.panel-font {
  font-size: 13px;
  font-weight: bold;
}

.panel-group {
  margin: 0;
}

.main-container {
  padding-top: 80px;
}

.modal-title{
  font-size: 18px;
  font-weight:bold;
}

.modal-body {
  text-align: left;
}

.info-modal {
  min-width: 120%;
  margin-top: -50px;
  font-weight: normal;
  font-size: 85%;

}

.request-button {
  font-weight: bold;
  font-size: 13px;
  max-width: 30px;
  margin-left: 23px;
}

.delete-button {
  font-family: 'Open Sans';
  font-weight: bold;
}

.edit-button {
  font-weight: bold;
  height: 40px;
  width: 45px;
  margin-left: 16px;
}

.info-button {
  width: 27px;
}

.add-button {
  position: relative;
  font-weight: bold;
  font-size: 13px;
}

.request-quantity {
  width: 99.8%;
  margin-left: 0px;
}

.request-subtable {
  max-width: 100%;
}

.info-icon {
  position: absolute;
  right: 0;
  margin: 28px;
  margin-top: 0;
}

.user-info {
  height: 270px;
  max-width: 90%;
  margin-left: 20px;
  margin-top: 15px;
  border: none;
  border-left: solid;
  border-color: rgba(0,150,255,1);
  border-width: 4px;
}

.userprofile-page {
  margin-top: 1%;
}

.userpage-tab {
  background-color: rgba(255,255,255,0.87);
  font-weight: bold;
  color: gray;
  margin-right: 20px;
  text-align: center;
}

.userpage-tab-container {
  min-width: 15%;
  margin-top: -1.6%;
  margin-left: 0.4%;
}

.userpage-tabs-container {
  border: none;
}

.login-form {
  margin: 50px;
  margin-left: 90px;
  max-width: 30%;
  font-family: 'Open Sans';
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.active {
    background-color: #4CAF50;
}

.center-text {
  width: 100%;
  text-align: center;
}

.signout-button {
  display: inline-block;
}

.navbar-right-panel{
  position:absolute;
  right:4%;
  display: inline-block;
}

.navbar-right-panel > .welcome-message {
  display:inline-block;
  padding-right: 20px;
  color: gray;
  font-size: 90%;
}

.navbar-brand {
  font-weight: bold;
  font-size: 15px;
}

.nav-link {
  font-size: 14px;
  margin: 0;
  margin-top: 2px;
  margin-bottom: 2px;
}

.nav-link.active {
  background-color: rgba(0,120,255,1);
  border-radius: 4px;
  color: white!important;
}

.navbar {
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.pagenum-textbox {
  width: 50px;
  margin-top: 1px;
  margin-left: 5px;
  margin-right: 5px;
}

.detail-view {
  min-width: 43%;
  min-height: 325px;
}

.detail-view-title {
  margin-top: 10px;
  margin-bottom: 20px;
  margin-left: 20px;
  max-width: 600px;
  overflow: hidden;
  white-space:normal;
  text-overflow: ellipsis;
}

.btn {
  font-weight: bold;
}

.modal-backdrop {
  opacity: 0.2!important;
}

.detail-view {
  margin-top: 200px;
}

.rowcount-dropdown {
  height: 175px;
  overflow-y: scroll;
}

.cart-actiontype-button {
  color: gray;
  text-align: left;
  font-size: 95%;
}

.page-dropdown {
  max-height: 175px;
  overflow-y: scroll;
}

.card-block {
  margin-left: 20px;
  margin-right: 20px;
}

.cart-item {
  width: 400px;
  margin-top: 5px;
  margin-bottom: 5px;
  color: gray;
  font-weight: bold;
  font-size: 13px;
}

.cart-modal {
  color: gray;
  width: 86.5%;
  margin-left: 10%;
}

.filterbox {
  width: 95%;
  margin-left: 20px;
  margin-right: 0;
  margin-bottom: 30px;
  border: none;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.inventory-page {
  margin-right: 20px;
}

.modal-body.padded {
  margin-top: 30px;
}

.confirmation-popup {
  padding-top: 200px;
}

.confirmation-dialog {
  width: 400px;
  font-size: 15px;
  font-weight: normal;
}

.alert {
  margin-left: 10px;
}

.request-detail-title {
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.add-to-cart {
  margin-top: 40%;
}

.add-to-cart-icon {
  margin-left: -40%;
  margin-right: 20%;
  height: 15px;
}

.perpage-button {
  width: 170px;
  margin-left: 2.69%!important;
}

.cart-checkbox {
  margin-left: 2%;
  margin-top: 0;
}

.cart-quantity-box {
  width: 30%;
  height: 22px;
  font-size: 100%;
}

.cart-quantity-label {
  margin-top: 0.2%;
  margin-right: 2%;
}

.cart-update-button {
  margin-top: 1.5%;
}

.user-select-box {
  margin-bottom: 2.5%;
  margin-top: 0.5%;
}

.date-select {
  margin-top: 10px;
  margin-left: 3%;
  text-align: center;
}

.date-card {
  height: 300px;
  max-width: 250px;
  margin-left: 1%;
  margin-top: 15px;
  border: none;
  border-left: solid;
  border-color: rgba(0,150,255,1);
  border-width: 4px;
}

.email-header {
  margin-top: 15px;
  margin-left: 15px;
  min-width: 70%;
}

.email-box {
  margin-left: 15px;
}

.email-text {
  height: 200px;
  background-color: white;
  min-width: 100%;
}

.email-subject-header {
  margin-top: 15px;
  margin-left: 15px;
  max-width: 60%;
}

.email-subject-text {
  background-color: white;
  min-width: 100%;
}

.description {
  float: left;
  padding-left: 0.3%;
  color: black;
}

.loan-details {
  white-space: pre-wrap;
}

.loan-status-dropdown {
  margin-right: 3%;
  margin-left: 1%;
}

.loantable-button {
  margin-right: 3%;
}

.loan-table {
  margin-left: 2.5%;
  max-width: 95%;
  border:none;
  border-left:solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
  font-size: 85%;
  color: gray;
}

.loan-table-mini {
  margin-left: 2.5%;
  max-width:55%;
}

.tooltip-inner {
  background-color: rgba(80,80,80,1)!important;
  border-left:solid;
  border-color: rgba(0,150,255,1);
  color: white;
  white-space: pre-wrap;
  text-align: left;
}

.custom-field-buttons {
  margin-top: -3%;
}

.customfield-apply {
  margin-left: 52.8%;
}

.custom-field-buttons > button{
  margin-right: 3%;
}

.customfield-maker-isprivate {
  margin-left: 0.35%;
  margin-bottom: -3%;
}

.customfield-maker-checkbox {
  margin-left: 3%;
}

.customfield-item {
  margin-bottom: 4%;
}

.customfield-editor-modal {
  max-width: 86.5%;
  margin-left: 10%;
  color: gray;
}

.page-link {
  background-color: white!important;
  color: rgba(0,120,255,1)!important;
  margin-top: 1px;
}

.page-link:hover {
  background-color: rgba(255,255,255, 0.7)!important;
}

.docs-glyph{
  font-size:60px;
  display:inline-block;
}

.docs-glyph > span {
  margin-right:30px;
}

.docs-title{
  display:inline-block;
}
 .docs-row{
   padding-bottom:3%;
 }

.table > tbody > tr > td {
  vertical-align: middle;
}

.table > thead > tr > th {
  vertical-align: middle;
}

thead {
  color: black;
}

tbody {
  color: gray;
  font-weight: bold;
}

a {
  text-decoration: none!important;
  outline: none;
}

a.inventory-row-clickable {
    display: block;
    width: 100%;
    height: 100%;
    text-decoration: none!important;
    color: gray;
}

a.inventory-row-clickable:hover {
  color: gray;
}

body {
    background-color: rgba(0,0,0,0.25);
}

button {
    font-family: 'Open Sans';
    font-weight: bold;
    font-size: 13px;
    padding: 8px 16px;
}

